# experience-engine

./: CHANGELOG.md  README.md  SELF_ASSESSMENT.md  config.py  core.py  example.py  pyproject.toml  reflection.py
.github/workflows/: drift-check.yml
experience_engine/: __init__.py  cli.py  core.py  ingest.py  llm.py  synthesis.py
